--- a/src/components/SingleCard.css
+++ b/src/components/SingleCard.css
@@ -12,9 +12,23 @@
 /*front of card - the picture*/
 .card .front {
   transform: rotateY(90deg);
+  transition: all ease-in 0.2s;
   position: absolute;
 }
 
 .flipped .front {
   transform: rotateY(0deg);
+  transition-delay: 0.2;
+}
+
+/*nack of card - cover*/
+
+.card .back {
+  transition: all ease-in 0.2s;
+  transition-delay: 0.2s;
+}
+
+.flipped .back {
+  transform: rotateY(90deg);
+  transition-delay: 0s;
 }
